package com.csl.factory.method;

import com.csl.factory.Operation;

/**
 * @author MaoLongLong
 * @date 2021-03-18 15:55:33
 */
public interface OperationFactory {

    Operation createOperation();
}
